--- a/paper.tex
+++ b/paper.tex
@@ -38,7 +38,7 @@
 \begin{abstract}
 %\input{abstract.tex}
 Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as functions of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse momentum interval 1~$ < \pt < $~4~GeV/$c$.
-Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity event classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet fragments in high-multiplicity events with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to hydrodynamical model calculations.
+Fourier coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity event classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet fragments in high-multiplicity events with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results show decreasing flow signal toward lower event multiplicity. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to hydrodynamical model calculations.
 % findings , physics conclusion.
 % discovery?
 
